[gd_scene load_steps=2 format=2]

[ext_resource path="res://Example/BranchingExample.gd" type="Script" id=1]

[node name="BranchingExample" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_left = 212.0
margin_top = 209.0
margin_right = 812.0
margin_bottom = 391.0

[node name="Options" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 600.0

[node name="Panel" type="Panel" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 4.0
margin_right = 600.0
margin_bottom = 154.0
rect_min_size = Vector2( 600, 150 )

[node name="DialogBox" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CanvasLayer/Control/VBoxContainer/Panel/DialogBox"]
margin_right = 600.0
margin_bottom = 14.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/VBoxContainer/Panel/DialogBox"]
margin_top = 18.0
margin_right = 600.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/Panel/DialogBox"]
margin_top = 130.0
margin_right = 600.0
margin_bottom = 150.0
alignment = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/Panel/DialogBox/HBoxContainer"]
margin_left = 515.0
margin_right = 600.0
margin_bottom = 20.0
text = "Start Dialog"
align = 0

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 158.0
margin_right = 600.0
margin_bottom = 182.0
text = "selected"
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Panel/DialogBox/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="CanvasLayer/Control/VBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
